Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25534

Memory leaks in qml3d tests

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.0
    • Qt3D 1.0
    • Qt3D
    • None

    Description

      Reports of memory leaks in qml3d tests

      Run make -C tests/auto/qml3d, and in the output is:

      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/amethyst.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 2
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/pastelstuff.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 3
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/bigblue.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 4
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/qtlogo.png' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 5
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/blueweb.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 6
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/threedgreen.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 7
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/amethyst.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 8
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/pastelstuff.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 9
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/bigblue.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 10
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/qtlogo.png' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 11
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/blueweb.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 12
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/threedgreen.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 13
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/threedgreen.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 14
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/amethyst.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 15
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/bigblue.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 16
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/pastelstuff.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 17
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/blueweb.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 18
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/qtlogo.png' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 19
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/threedgreen.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 20
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/amethyst.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 21
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/bigblue.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 22
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/pastelstuff.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 23
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/blueweb.jpg' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 24
      QWARN  : qml3d::UnknownTestFunc() OPENGL RESOURCE LEAK: texture 'file:///Users/sarasmit/depot/qt5/qt3d/tests/auto/qml3d/modelview/textures/qtlogo.png' has non-released resources:
      QWARN  : qml3d::UnknownTestFunc()   id = 25
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sergey.dubitskiy Sergey (closed Nokia identity) (Inactive)
            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes