Memory leaks in qml3d tests.

Task-number: QTBUG-25534
Change-Id: I53092e4d1a89946139ec051ef7bea39b3623c269
Reviewed-by: Danny Pope <daniel.pope@nokia.com>